# pinax

./: .gitignore  .golangci.yml  .goreleaser.yml  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  CONTRIBUTING.zh-CN.md  LICENSE  MEMORY.md  README.md  README.zh-CN.md  SECURITY.md  SECURITY.zh-CN.md  Taskfile.yml  go.mod  go.sum
.github/workflows/: pinax-release.yml
cmd/pinax/: activity_command_test.go  agent_context_command_test.go  api_command_test.go  asset_command_test.go  brain_command_test.go  cli_output_contract_test.go  cli_testkit_test.go  cli_tree_command_test.go  collection_graph_command_test.go  completion_coverage_test.go  config_command_test.go  core_command_test.go  durable_source_notes_test.go  kb_command_test.go  main.go  main_test.go  memory_command_test.go  monitor_command_test.go  note_record_command_test.go  plugin_command_test.go  project_subproject_list_order_command_test.go  project_trash_sync_command_test.go  prompt_command_test.go  proof_command_test.go  proof_loop_contract_test.go  publish_command_test.go  repair_organize_command_test.go  search_database_command_test.go  share_command_test.go  sync_cloud_backend_plan_command_test.go  sync_daemon_command_test.go  template_command_test.go  token_profile_command_test.go  version_command_test.go  (+1 more)
docs/: README.md  README.zh-CN.md  demo-proof-loop.md  quickstart.md
openspec/: config.yaml
tools/pinax-lancedb-sidecar/: README.md  pyproject.toml
tools/pinax-lancedb-sidecar/src/pinax_lancedb_sidecar/: __init__.py  __main__.py
tools/pinax-lancedb-sidecar/tests/: test_protocol_offline.py  test_sidecar.py
(+1136 files in other folders)
