[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "pinax-lancedb-sidecar"
version = "0.1.2"
description = "LanceDB sidecar for Pinax semantic KB projections"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "lancedb>=0.33,<0.34",
]

[project.scripts]
pinax-lancedb-sidecar = "pinax_lancedb_sidecar.__main__:main"
